--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -11,4 +12,43 @@ code {
 
 .App {
   text-align: center;
+}
+
+.btns-container {
+  width: 200px;
+  margin: 0 auto;
+  display: block;
+  gap: 0.5em;
+}
+
+.button {
+  position: relative;
+  height: 50px;
+  width: 50px;
+  border: 1px solid black;
+  border-radius: 3px;
+  background: grey;
+  color: black;
+}
+
+.button:hover {
+  background: darkgray;
+}
+
+.btn-text {
+  text-align: center;
+}
+
+#clear {
+  width: 100px;
+}
+
+#zero {
+  width: 100px;
+}
+
+#equal {
+  position: absolute;
+  margin-top: -50px;
+  height: 100px;
 }/*# sourceMappingURL=main.css.map */
