--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,20 @@
   height: 80px;
 }
 
+.formula-screen{
+  text-align: right;
+  height: 20px;
+  color: orangered;
+  font-size: 1rem;
+}
+
+.output-screen{
+  text-align: right;
+  height: 50px;
+  color: yellow;
+  font-size: 2rem;
+}
+
 .btns-container{
   background: black;
   width: 200px;
