--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,6 +11,51 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-.App {
-  text-align: center;
+#frame {
+  max-width: 220px;
+  margin: 10vh auto 0 auto;
+  background: black;
+}
+
+.display {
+  display: flex;
+  flex-direction: column;
+}
+.display .history {
+  border: none;
+  background-color: black;
+  text-align: right;
+  height: 21px;
+  font-size: 18px;
+  color: wheat;
+}
+.display .current-calc {
+  border: none;
+  background: black;
+  text-align: right;
+  height: 42px;
+  font-size: 30px;
+  color: wheat;
+}
+
+.buttons {
+  margin: 0 auto;
+  padding: 0.5em 0 0.5em 0;
+  max-width: 200px;
+  display: block;
+}
+
+button {
+  height: 50px;
+  width: 50px;
+}
+
+.span-two {
+  height: 50px;
+  width: 100px;
+}
+
+.span-vertical {
+  width: 50px;
+  height: 100px;
 }/*# sourceMappingURL=main.css.map */
