--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,37 +4,50 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #141125;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
+html {
+  background: #0e0e0e;
+  font-weight: 500;
+}
+
+#root {
+  background: #0e0e0e;
+}
+
 #frame {
   max-width: 220px;
   margin: 10vh auto 0 auto;
-  background: black;
+  background: #000000;
+  border-radius: 3px;
 }
 
 .display {
+  padding: 0 0.5em 0 0.5em;
   display: flex;
   flex-direction: column;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 .display .history {
   border: none;
-  background-color: black;
+  background-color: #000000;
   text-align: right;
   height: 21px;
-  font-size: 18px;
+  font-size: 1.1rem;
   color: wheat;
 }
 .display .current-calc {
   border: none;
-  background: black;
+  background: #000000;
   text-align: right;
   height: 42px;
-  font-size: 30px;
+  font-size: 2.1rem;
   color: wheat;
   outline: none;
 }
@@ -45,10 +58,26 @@ code {
   max-width: 200px;
   display: block;
 }
+.buttons .digit-btn {
+  background: #171717;
+  color: wheat;
+}
+.buttons .operation-btn {
+  background: #e48900;
+  color: #000000;
+}
 
 button {
+  font-size: 1rem;
+  font-weight: 500;
+  border: 1px solid #000000;
+  border-radius: 2px;
   height: 50px;
   width: 50px;
+}
+
+button:active {
+  opacity: 0.8;
 }
 
 .span-two {
