--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,6 +27,7 @@ html{
     text-align: right;
     height: 21px;
     font-size: 1.1rem;
+    //font-weight: 500;
     color: wheat;
   }
   .current-calc{
@@ -35,6 +36,7 @@ html{
     text-align: right;
     height: 42px;
     font-size: 2.1rem;
+    //font-weight: 500;
     color: wheat;
     outline: none;
   }
@@ -71,4 +73,14 @@ button:active{
 .span-two{
   height: 50px;
   width: 100px;
+}
+
+footer{
+  margin-top: 20vh;
+  text-align: center;
+  a{
+    color: wheat;
+    font-size: 2rem;
+    text-decoration: none;
+  }
 }
